Add readme, JWT, change authorization
