# src/routes/main_route.rs
@@ -1,17 +1,13 @@
-use actix_web::web;
-use std::env;
-use crate::route_middleware::get_user::CreatedByMiddleware;
+use crate::handlers::flutter_sync_handler::{get_sync, post_sync_push};
 use crate::handlers::insulin_handler::{
-    get_all_insulin_items_api,
-    post_insulin_items_api,
-    get_all_insulin_assign_usage_api,
-    post_insulin_assign_api,
-    delete_insulin_assign_api,
+    delete_insulin_assign_api, delete_insulin_usage_api, get_all_insulin_assign_usage_api,
+    get_all_insulin_items_api, post_insulin_assign_api, post_insulin_items_api,
     post_insulin_usage_api,
-    delete_insulin_usage_api,
 };
 use crate::handlers::swagger_handler::{get_swagger_ui, get_swagger_yaml};
-use crate::handlers::flutter_sync_handler::{get_sync, post_sync_push};
+use crate::route_middleware::get_user::CreatedByMiddleware;
+use actix_web::web;
+use std::env;
 
 pub fn init(cfg: &mut web::ServiceConfig) {
     // ── Swagger UI (development only) ────────────────────────────────────────
@@ -27,20 +23,26 @@ pub fn init(cfg: &mut web::ServiceConfig) {
 
     // ── API Routes ───────────────────────────────────────────────────────────
     cfg.service(
-        web::scope("/api/user/{created_by}")
+        web::scope("/api/user")
             .wrap(CreatedByMiddleware)
             .route("/insulin-item", web::get().to(get_all_insulin_items_api))
             .route("/insulin-item", web::post().to(post_insulin_items_api))
-            .route("/insulin-assign-usage", web::get().to(get_all_insulin_assign_usage_api))
+            .route(
+                "/insulin-assign-usage",
+                web::get().to(get_all_insulin_assign_usage_api),
+            )
             .route("/insulin-assign", web::post().to(post_insulin_assign_api))
-            .route("/insulin-assign/{insulin_assign_id}", web::delete().to(delete_insulin_assign_api))
+            .route(
+                "/insulin-assign/{insulin_assign_id}",
+                web::delete().to(delete_insulin_assign_api),
+            )
             .route("/insulin-usage", web::post().to(post_insulin_usage_api))
             .route("/insulin-usage", web::delete().to(delete_insulin_usage_api)),
     );
 
     cfg.service(
         web::scope("/api/flutter")
-        .route("/health-sync", web::get().to(get_sync))
-        .route("/health-sync/push", web::post().to(post_sync_push))
+            .route("/health-sync", web::get().to(get_sync))
+            .route("/health-sync/push", web::post().to(post_sync_push)),
     );
-}
+}
